# ai-secret-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  secret-scan.yml
examples/: basic_scan.py  ci_integration.py  custom_rules.py
src/ai_secret_guard/: __init__.py  cli.py  detector.py  models.py  reporter.py  risk_engine.py  scanner.py
tests/: __init__.py  test_detector.py  test_risk_engine.py  test_scanner.py
